--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 	3. Navigation Styling
 	4. Mini Banner Styling
 	5. Full Banner
+	6. Trello Game Tasks Styling
 ----------------------------------------
 */
 
@@ -23,17 +24,17 @@
 *
 {
 	margin: 0;
-	padding: 0px;
+	padding: 0;
 }
 
 body
 {
-	background: #ffffff;
 	margin: 0;
 	height: 100%;
 	color: #384452;
-	font-family: 'Lato', sans-serif;
 	font-weight: 400;
+	background: #ffffff;
+	font-family: 'Lato', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6
@@ -72,13 +73,52 @@ a:hover, a:focus
   color:#01b2fe;
 }
 
+table
+{
+	width: 100%;
+	background-color: #fff;
+}
+
+th, td
+{
+	padding-left: 25px;
+	padding-right: 25px;
+}
+
+form .form-group
+{
+    margin-bottom: 30px;
+}
+
+form .form-control
+{
+    box-shadow: none !important;
+    border: 2px solid #ccc;
+}
+
+form input
+{
+	height: 46px;
+	padding: 10px 16px;
+	font-size: 18px;
+	line-height: 1.33;
+	border-radius: 6px;
+}
+
+form label
+{
+	font-weight: bold;
+	position: absolute;
+	display: inline-block;
+}
+
 /* -------------------- Navigation Styling -------------------- */
 
 .navigationSection .navbar
 {
 	min-height: 70px;
 	padding-top: 10px;
-	margin-bottom: 0px;
+	margin-bottom: 0;
 }
 
 .navigationSection .navbar-default
@@ -195,4 +235,108 @@ a:hover, a:focus
 	height: 50vh;
 	border-radius: 5px;
 	box-shadow: 7px 7px 10px;
+}
+
+/* -------------------- Trello Game Tasks Styling -------------------- */
+
+.gameProgress
+{
+	overflow: hidden;
+
+	box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+	-o-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+	-ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.headerTable
+{
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.headerTableRound
+{
+	border-radius: 10px;
+}
+
+.gameProgressScrolling
+{
+	height: 530px; /* Every row is approximately 53px which 10 rows is the maximum of row which fit */
+	overflow: auto;
+}
+
+.gameProgress thead tr th
+{
+	padding-top: 18px;
+	padding-bottom: 18px;
+
+	color: #FFFFFF;
+	font-size: 18px;
+	line-height: 1.4;
+
+    background-color: #6c7ae0;
+}
+
+.gameProgress tr .taskNameColumn,
+	.gameProgress thead tr th .taskNameColumn
+{
+	width: 30%;
+}
+
+.gameProgress tr .taskRoleColumn,
+	.gameProgress thead tr th .taskRoleColumn
+{
+	width: 20%;
+}
+
+.gameProgress tr .taskTimeColumn,
+	.gameProgress thead tr th .taskTimeColumn
+{
+	width: 25%;
+}
+
+.gameProgress tr .taskProgressColumn,
+	.gameProgress thead tr th .taskProgressColumn
+{
+	width: 25%;
+}
+
+.gameProgress tr td
+{
+    padding-top: 16px;
+	padding-bottom: 16px;
+
+	color: #808080;
+	font-size: 15px;
+	line-height: 1.4;
+}
+
+.gameProgress tr:nth-child(even)
+{
+	background-color: #f8f6ff;
+}
+
+.progress
+{
+	height: 20px;
+	position: relative;
+	border-radius: 30px;
+	margin-bottom: 0;
+	background-color: #f5f5f5;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.progress .progress-bar
+{
+	background: #28bbf8;
+}
+
+.progress .progress-bar span
+{
+	width: 100%;
+    color: black;
+	display: block;
+	position: absolute;
 }
