--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Lato:400,900);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,900);
 
 /*
 ----------------------------------------
@@ -9,6 +9,16 @@
 	4. Mini Banner Styling
 	5. Full Banner
 	6. Trello Game Tasks Styling
+----------------------------------------
+*/
+
+/**
+----------------------------------------
+Convention for CSS ordering and each section should be separated by a enter:
+	- Display	- width, height, margin, padding, display, position, border, overflow, box-shadow
+	- Color		- color, background
+	- Text		- font-size, font-weight, line-height, text-align, font-family
+	- Other		- text-decoration, transition
 ----------------------------------------
 */
 
@@ -31,34 +41,39 @@ body
 {
 	margin: 0;
 	height: 100%;
+
 	color: #384452;
-	font-weight: 400;
 	background: #ffffff;
+
+	font-weight: 400;
 	font-family: 'Lato', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Raleway', sans-serif;
 	font-weight: 700;
+	font-family: 'Raleway', sans-serif;
 }
 
 p
 {
-	padding: 0;
-	margin-bottom: 12px;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	color: #384452;
 	margin-top: 10px;
+	margin-bottom: 12px;
+	padding: 0;
+
+	color: #384452;
+
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	font-family: 'Lato', sans-serif;
 }
 
 a
 {
-	padding: 0;
 	margin: 0;
+	padding: 0;
+
 	text-decoration: none;
 	-webkit-transition: background-color .4s linear, color .4s linear;
 	-moz-transition: background-color .4s linear, color .4s linear;
@@ -69,13 +84,15 @@ a
 
 a:hover, a:focus
 {
-  text-decoration: none;
-  color:#01b2fe;
+	color:#01b2fe;
+
+	text-decoration: none;
 }
 
 table
 {
 	width: 100%;
+
 	background-color: #fff;
 }
 
@@ -87,29 +104,31 @@ th, td
 
 form .form-group
 {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 form .form-control
 {
-    box-shadow: none !important;
-    border: 2px solid #ccc;
+	border: 2px solid #CCCCCC;
+	box-shadow: none !important;
 }
 
 form input
 {
 	height: 46px;
 	padding: 10px 16px;
+	border-radius: 6px;
+
 	font-size: 18px;
 	line-height: 1.33;
-	border-radius: 6px;
 }
 
 form label
 {
-	font-weight: bold;
-	position: absolute;
 	display: inline-block;
+	position: absolute;
+
+	font-weight: 700;
 }
 
 /* -------------------- Navigation Styling -------------------- */
@@ -117,20 +136,21 @@ form label
 .navigationSection .navbar
 {
 	min-height: 70px;
-	padding-top: 10px;
 	margin-bottom: 0;
+	padding-top: 10px;
 }
 
 .navigationSection .navbar-default
 {
-	background-color: #384452;
 	border-color: transparent;
+
+	background-color: #384452;
 }
 
 .navigationSection .navbar .navbar-brand
 {
-	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
+	font-family: 'Raleway', sans-serif;
 }
 
 .navigationSection .navbar-header .navbar-brand,
@@ -156,6 +176,7 @@ form label
 	.navigationSection .navbar-default .navbar-nav > .open > a:focus
 {
 	color: #00b3fe;
+
 	background-color: transparent;
 }
 
@@ -166,15 +187,16 @@ form label
 
 .navigationSection .navbar-default li.dropdown:hover > .dropdown-menu
 {
-    display: block;
+	display: block;
 }
 
 .navigationSection .navbar-default .navbar-nav > li > a,
 	.navigationSection .navbar-default .dropdown-menu > li > a
 {
 	color: white;
-	font-weight: 700;
+
 	font-size: 14px;
+	font-weight: 700;
 }
 
 /* -------------------- Mini Banner Styling -------------------- */
@@ -184,24 +206,28 @@ form label
 	margin-top: 70px;
 	padding-top: 25px;
 	padding-bottom: 25px;
-    background: #184e8e;
+
+	background: #184e8e;
 }
 
 .miniBanner h3
 {
-	color: white;
 	margin-left: 15px;
+
+	color: white;
 }
 
 /* -------------------- Full Banner Styling -------------------- */
 
 .fullBanner
 {
+	height: calc(100vh - 70px); /* Responsible for making an offset from top */
 	padding: 100px;
 	margin-top: 70px;
+
+	background: #184e8e linear-gradient(135deg, #172a74, #21a9af);
+
 	text-align: center;
-	height: calc(100vh - 70px); /* Responsible for making an offset from top */
-    background: #184e8e linear-gradient(135deg, #172a74, #21a9af);
 }
 
 .fullBanner .row
@@ -217,17 +243,21 @@ form label
 
 .fullBanner h1 /* Text Title in the Full Banner Section */
 {
-    color: #fff;
-    font-size: 40px;
 	margin-top: 80px;
-    margin-bottom: 40px;
+	margin-bottom: 40px;
+
+	color: #fff;
+
+	font-size: 40px;
 }
 
 .fullBanner h5 /* Text Description in the Full Banner Section */
 {
-    color: #FFFFFF;
-    font-size: 18px;
-    margin-bottom: 30px;
+	margin-bottom: 30px;
+
+	color: #FFFFFF;
+
+	font-size: 18px;
 }
 
 .fullBanner .bannerImage
@@ -273,10 +303,10 @@ form label
 	padding-bottom: 18px;
 
 	color: #FFFFFF;
+	background-color: #6c7ae0;
+
 	font-size: 18px;
 	line-height: 1.4;
-
-    background-color: #6c7ae0;
 }
 
 .gameProgress tr .taskNameColumn,
@@ -305,10 +335,11 @@ form label
 
 .gameProgress tr td
 {
-    padding-top: 16px;
+	padding-top: 16px;
 	padding-bottom: 16px;
 
 	color: #808080;
+
 	font-size: 15px;
 	line-height: 1.4;
 }
@@ -321,11 +352,12 @@ form label
 .progress
 {
 	height: 20px;
+	margin-bottom: 0;
 	position: relative;
 	border-radius: 30px;
-	margin-bottom: 0;
-	background-color: #f5f5f5;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+
+	background-color: #f5f5f5;
 }
 
 .progress .progress-bar
@@ -336,7 +368,8 @@ form label
 .progress .progress-bar span
 {
 	width: 100%;
-    color: black;
 	display: block;
 	position: absolute;
+
+	color: black;
 }
