Add manage trello project page and expiry date

--- a/src/app/pages/@theme/modals/modals.component.html
+++ b/src/app/pages/@theme/modals/modals.component.html
@@ -98,6 +98,22 @@
       </card-body>
     </card>
   </div>
+
+  <div class="col-md-4">
+    <card>
+      <card-header>
+        <card-title>
+          Confirmation Modal
+        </card-title>
+      </card-header>
+
+      <card-body>
+        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#confirmationModal">
+          Launch Modal
+        </button>
+      </card-body>
+    </card>
+  </div>
 </div>
 
 <modal modalId="defaultModal">
@@ -132,66 +148,81 @@
   </modal-title>
 
   <modal-body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus nunc quis mauris pulvinar molestie.
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus nunc quis mauris pulvinar molestie.
       Aliquam eros nunc, luctus in malesuada ut, facilisis elementum sem. Pellentesque a fermentum mauris. Nunc arcu
       tortor, scelerisque non euismod quis, tristique ut est. Donec in quam eu erat ullamcorper pretium nec sed risus.
       Donec tincidunt lobortis aliquet. Morbi faucibus eros ex, elementum auctor libero vehicula at. Aenean nec nisi
       dictum, iaculis turpis sed, elementum lacus. Aenean quis enim metus. Quisque sed finibus velit, ac consequat urna.
     </p>
 
-    <p>Donec molestie augue vel magna fringilla tincidunt. In accumsan sit amet turpis quis fermentum. Fusce tempus erat
+    <p>
+      Donec molestie augue vel magna fringilla tincidunt. In accumsan sit amet turpis quis fermentum. Fusce tempus erat
       et finibus imperdiet. Fusce sapien arcu, pretium et auctor vel, viverra a risus. Phasellus volutpat, tortor eu
       tempus ultrices, eros eros commodo mi, quis semper lectus ante in augue. Cras sodales auctor efficitur. Fusce
       blandit arcu nulla, ac luctus turpis pharetra ac. Maecenas eget risus justo. Cras eget nisl cursus ipsum accumsan
-      laoreet. Suspendisse volutpat nulla ac urna mollis congue. Mauris eget metus nisl.</p>
+      laoreet. Suspendisse volutpat nulla ac urna mollis congue. Mauris eget metus nisl.
+    </p>
 
-    <p>Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
+    <p>
+      Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
       rutrum est, quis euismod enim felis at odio. Curabitur at tincidunt dui. Integer ligula quam, auctor blandit dolor
       sit amet, sollicitudin fringilla leo. Phasellus blandit semper justo vitae consectetur. Curabitur et lacus leo.
       Aenean turpis nisi, facilisis nec eros eu, laoreet tristique diam. Mauris ullamcorper libero enim, id consectetur
       nunc feugiat non. Cras mollis justo in velit sagittis, at finibus nisi egestas. Nulla mattis posuere sapien, ac
       volutpat urna porttitor sit amet. Nulla non nisl lacus. Aliquam malesuada fermentum leo, in auctor quam. Maecenas
-      vehicula commodo mi, non suscipit tortor.</p>
+      vehicula commodo mi, non suscipit tortor.
+    </p>
 
-    <p>Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
+    <p>
+      Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
       Donec gravida, arcu quis tempus ultrices, quam nunc posuere augue, a semper turpis orci a tellus. Sed sit amet
       sapien non nulla rutrum consectetur quis eu nisl. Aenean vulputate pellentesque ante, consequat vestibulum erat
       mollis sed. Duis laoreet at nulla vitae aliquet. Pellentesque elementum nulla nec ex interdum efficitur.
       Suspendisse potenti. Ut purus sem, interdum vitae lectus et, euismod eleifend turpis. Quisque ac tristique nisl.
       Sed ac dolor nulla. Vivamus nisi elit, interdum nec venenatis non, tempus vel mauris. Maecenas maximus suscipit
-      condimentum. Nullam vitae purus augue.</p>
+      condimentum. Nullam vitae purus augue.
+    </p>
 
-    <p>Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
+    <p>
+      Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
       rutrum est, quis euismod enim felis at odio. Curabitur at tincidunt dui. Integer ligula quam, auctor blandit dolor
       sit amet, sollicitudin fringilla leo. Phasellus blandit semper justo vitae consectetur. Curabitur et lacus leo.
       Aenean turpis nisi, facilisis nec eros eu, laoreet tristique diam. Mauris ullamcorper libero enim, id consectetur
       nunc feugiat non. Cras mollis justo in velit sagittis, at finibus nisi egestas. Nulla mattis posuere sapien, ac
       volutpat urna porttitor sit amet. Nulla non nisl lacus. Aliquam malesuada fermentum leo, in auctor quam. Maecenas
-      vehicula commodo mi, non suscipit tortor.</p>
+      vehicula commodo mi, non suscipit tortor.
+    </p>
 
-    <p>Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
+    <p>
+      Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
       Donec gravida, arcu quis tempus ultrices, quam nunc posuere augue, a semper turpis orci a tellus. Sed sit amet
       sapien non nulla rutrum consectetur quis eu nisl. Aenean vulputate pellentesque ante, consequat vestibulum erat
       mollis sed. Duis laoreet at nulla vitae aliquet. Pellentesque elementum nulla nec ex interdum efficitur.
       Suspendisse potenti. Ut purus sem, interdum vitae lectus et, euismod eleifend turpis. Quisque ac tristique nisl.
       Sed ac dolor nulla. Vivamus nisi elit, interdum nec venenatis non, tempus vel mauris. Maecenas maximus suscipit
-      condimentum. Nullam vitae purus augue.</p>
+      condimentum. Nullam vitae purus augue.
+    </p>
 
-    <p>Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
+    <p>
+      Aenean diam nisl, suscipit at consequat et, eleifend eget sem. Duis dapibus, lorem id convallis accumsan, dui est
       rutrum est, quis euismod enim felis at odio. Curabitur at tincidunt dui. Integer ligula quam, auctor blandit dolor
       sit amet, sollicitudin fringilla leo. Phasellus blandit semper justo vitae consectetur. Curabitur et lacus leo.
       Aenean turpis nisi, facilisis nec eros eu, laoreet tristique diam. Mauris ullamcorper libero enim, id consectetur
       nunc feugiat non. Cras mollis justo in velit sagittis, at finibus nisi egestas. Nulla mattis posuere sapien, ac
       volutpat urna porttitor sit amet. Nulla non nisl lacus. Aliquam malesuada fermentum leo, in auctor quam. Maecenas
-      vehicula commodo mi, non suscipit tortor.</p>
+      vehicula commodo mi, non suscipit tortor.
+    </p>
 
-    <p>Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
+    <p>
+      Suspendisse et urna sed magna blandit dapibus. Nunc a tincidunt tellus. Morbi iaculis quis ligula nec feugiat.
       Donec gravida, arcu quis tempus ultrices, quam nunc posuere augue, a semper turpis orci a tellus. Sed sit amet
       sapien non nulla rutrum consectetur quis eu nisl. Aenean vulputate pellentesque ante, consequat vestibulum erat
       mollis sed. Duis laoreet at nulla vitae aliquet. Pellentesque elementum nulla nec ex interdum efficitur.
       Suspendisse potenti. Ut purus sem, interdum vitae lectus et, euismod eleifend turpis. Quisque ac tristique nisl.
       Sed ac dolor nulla. Vivamus nisi elit, interdum nec venenatis non, tempus vel mauris. Maecenas maximus suscipit
-      condimentum. Nullam vitae purus augue.</p>
+      condimentum. Nullam vitae purus augue.
+    </p>
   </modal-body>
 
   <modal-footer></modal-footer>
@@ -262,3 +293,5 @@
 
   <modal-footer></modal-footer>
 </modal>
+
+<confirmation-modal modalId="confirmationModal"></confirmation-modal>
